# finbot

./: .env.example  .gitignore  AGENTS.md  README.md  dry_run_btc.bat  pyproject.toml  run_bot.py  run_mcp.py  start_bot.bat  start_mcp.bat
docs/: FINBAR_RUNTIME_COPY.md  HYPERLIQUID_OPERATIONAL_MODEL.md  INTEGRATION_PLAN.md  PLAN_REVIEW.md  SECURITY.md  STRATEGY_COMPATIBILITY_MATRIX.md
finbot/: __init__.py
finbot/config/: settings.py
finbot/startup/: __init__.py  db.py  live_trading_runtime_builder.py  mcp.py  mcp_server.py  runtime_factory.py  service_factory.py  telegram.py
scripts/: verify_strategy_equivalence.py
specs/2026-06-12_live-yaml-trading-runtime/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md
specs/2026-06-13_hip3-perp-support/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md
specs/2026-06-14_finbot-mcp-control-plane/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md
specs/2026-06-14_import-strategy-runtime-package/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md
specs/2026-06-15_durable-trade-entity-and-realized-pnl/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md  REVIEW.md
specs/2026-06-15_live-external-data-supply/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md
specs/2026-06-15_multi-ticker-portfolio-runtime/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md  REVIEW.md
specs/2026-06-16_telegram-bot-control/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md
specs/2026-06-24_cross-asset-strategy-support/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md
strategies/: 15_cross_asset_btc_informative.yaml  amt_dip_buyer_final.yaml  amt_v2_vol_filter.yaml
tests/: conftest.py  fakes.py  fakes_telegram.py
tests/test_application/: test_account_events.py  test_bot_loop_integration.py  test_live_mode_gates.py  (+18 more)
(+388 files in other folders)
