[project]
name = "finbot"
version = "0.1.0"
description = "Live Hyperliquid trading runtime for Finbar strategies"
requires-python = ">=3.12"
dependencies = [
    "finbar-strategy-runtime[pandas,yaml]>=0.1.0,<0.2.0",
    "hyperliquid-python-sdk>=0.10.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "fastmcp>=2.0.0",
]
mcp = [
    "fastmcp>=2.0.0",
]

[project.scripts]
finbot = "finbot.presentation.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "finbar_parity: optional tests comparing Finbot runtime against Finbar",
]
